# programmieruebung_2-5

./: Ideen_findung.md  README.md  ekg_data.py  main.py  pyproject.toml  read_data.py  read_pandas.py
