[project]
name = "programmieruebung_2-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LukasKmci", email = "kl4641@mci4me.at"},
    {name = "Simon Krainer", email = "ks0376@mci4me.at"},
]
dependencies = [
    "streamlit>=1.45.1",
    "jupyter>=1.1.1",
    "pyproject-toml>=0.1.0",
    "plotly>=6.1.2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
